<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_page_title">My Nanodegree Apps!</string>
    <string name="button_text_spotify">SPOTIFY STREAMER</string>
    <string name="button_text_library">LIBRARY APP</string>
    <string name="button_text_football">FOOTBALL SCORES APP</string>
    <string name="button_text_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_XYZ_reader">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>
</resources>
