<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#BBDEFB">

    <TextView android:text="@string/main_page_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MainActivity"
            android:background="#BBDEFB">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_spotify"
                android:id="@+id/button_spotify"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:background="@drawable/udacity_button"
                android:minWidth="250dp"
                android:onClick="showToastMessage"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_football"
                android:id="@+id/button_scores"
                android:layout_marginTop="10dp"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:background="@drawable/udacity_button"
                android:minWidth="250dp"
                android:layout_below="@+id/button_spotify"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:onClick="showToastMessage"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_library"
                android:id="@+id/button_library"
                android:layout_marginTop="10dp"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:background="@drawable/udacity_button"
                android:minWidth="250dp"
                android:layout_below="@+id/button_scores"
                android:layout_centerHorizontal="true"
                android:onClick="showToastMessage"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_build_it_bigger"
                android:id="@+id/button_build_it"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:background="@drawable/udacity_button"
                android:minWidth="250dp"
                android:layout_below="@+id/button_library"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="showToastMessage"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_XYZ_reader"
                android:id="@+id/button_xyz"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:background="@drawable/udacity_button"
                android:minWidth="250dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button_build_it"
                android:layout_centerHorizontal="true"
                android:onClick="showToastMessage"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_capstone"
                android:id="@+id/button_capstone"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:background="@drawable/udacity_button"
                android:minWidth="250dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button_xyz"
                android:layout_centerHorizontal="true"
                android:onClick="showToastMessage"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
